# ROS2_REPAS

./: .gitmodules
install/: local_setup.sh  setup.sh
install/camera_sensor/lib/camera_sensor/: camera_return_z_publisher
install/camera_sensor/share/camera_sensor/: package.dsv  package.ps1  package.sh  package.xml
install/camera_sensor/share/camera_sensor/camera_z_data/: camera_z.txt
install/robotiq_2f_gripper_description/share/robotiq_2f_gripper_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robotiq_2f_gripper_description/share/robotiq_2f_gripper_description/cmake/: robotiq_2f_gripper_descriptionConfig-version.cmake  robotiq_2f_gripper_descriptionConfig.cmake
install/robotiq_2f_gripper_description/share/robotiq_2f_gripper_description/environment/: ament_prefix_path.dsv  path.dsv
install/robotiq_2f_gripper_description/share/robotiq_2f_gripper_description/launch/: robotiq_2f_gripper.rviz  visualize.launch
install/robotiq_2f_gripper_description/share/robotiq_2f_gripper_description/urdf/: example_use_robotiq_2f_140.urdf.xacro  robotiq_2f_140.xacro  robotiq_2f_140_macro.xacro  robotiq_arg2f.xacro  robotiq_arg2f_transmission.xacro
install/robotiq_2f_gripper_hardware/include/robotiq_2f_gripper_hardware/: robotiq_2f_gripper_node.hpp
install/robotiq_2f_gripper_hardware/lib/robotiq_2f_gripper_hardware/: robotiq_2f_gripper_node
install/robotiq_2f_gripper_hardware/share/robotiq_2f_gripper_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robotiq_2f_gripper_hardware/share/robotiq_2f_gripper_hardware/cmake/: robotiq_2f_gripper_hardwareConfig-version.cmake  robotiq_2f_gripper_hardwareConfig.cmake
install/robotiq_2f_gripper_hardware/share/robotiq_2f_gripper_hardware/environment/: ament_prefix_path.dsv  path.dsv
install/robotiq_2f_gripper_hardware/share/robotiq_2f_gripper_hardware/launch/: robotiq_2f_gripper_launch.py
install/robotiq_2f_gripper_interfaces/include/robotiq_2f_gripper_interfaces/: crc_utils.hpp  data_utils.hpp  default_driver.hpp  default_driver_factory.hpp  default_serial.hpp  default_serial_factory.hpp  driver.hpp  driver_exception.hpp  driver_factory.hpp  hardware_interface.hpp  serial.hpp  serial_factory.hpp  visibility_control.hpp
install/robotiq_2f_gripper_interfaces/include/robotiq_2f_gripper_interfaces/fake/: fake_driver.hpp
install/robotiq_2f_gripper_interfaces/share/robotiq_2f_gripper_interfaces/: hardware_interface_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robotiq_2f_gripper_interfaces/share/robotiq_2f_gripper_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  robotiq_2f_gripper_interfacesConfig-version.cmake  robotiq_2f_gripper_interfacesConfig.cmake  robotiq_2f_gripper_interfaces_targetsExport-noconfig.cmake
install/robotiq_2f_gripper_interfaces/share/robotiq_2f_gripper_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/robotiq_2f_gripper_msgs/share/robotiq_2f_gripper_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/robotiq_2f_gripper_msgs/share/robotiq_2f_gripper_msgs/action/: MoveTwoFingerGripper.action  (+2 more)
install/serial/include/serial/: serial.h  v8stdint.h
install/serial/share/serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur5e_moveit_demo/lib/ur5e_moveit_demo/: home  hydroponic_waypoint_grid  hydroponic_waypoint_grid_v2  move_ur5e  parlight_grid  parlight_grid_with_cadsensor  parlight_grid_with_hydrosystem  rpm_complex  rpm_continuous  rpm_continuous_data  rpm_pos_agnostic_with_data  rpm_simple  rpm_simple_with_data  russell_script1  waypoint_grid
install/ur5e_moveit_demo/share/ur5e_moveit_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/ur_simulation_gz/share/ur_simulation_gz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/camera_sensor/: setup.cfg  setup.py
src/camera_sensor/camera_sensor/: camera_return_z.py  canopy_return.py
src/camera_sensor/camera_z_data/: camera_z.txt
src/ur5e_moveit_demo/: CMakeLists.txt  package.xml
src/ur5e_moveit_demo/config/: hydroponic_waypoint_nodes.yaml
src/ur5e_moveit_demo/install/: local_setup.sh  setup.sh
src/ur5e_moveit_demo/install/ur5e_moveit_demo/share/ur5e_moveit_demo/: package.dsv  package.ps1  package.sh  package.zsh
src/ur5e_moveit_demo/launch/: home.launch.py  hydroponic_waypoint_grid_v2.launch.py  move_ur5e.launch.py  rpm_complex.launch.py  rpm_continuous.launch.py  rpm_continuous_data.launch.py  rpm_pos_agnostic_with_data.launch.py  waypoint_grid.launch.py
src/ur5e_moveit_demo/log/: latest_build
src/ur5e_moveit_demo/rpm_data/: orientation_statistics_1.csv  orientation_stats_const1s.csv  orientation_stats_with_accel.csv  rotated_vectors.csv  rotated_vectors_orientation_only.csv  rotated_vectors_orientation_only_2.csv  rotated_vectors_orientation_only_4.csv  rotated_vectors_successful.csv  rotated_vectors_successful_24hours.csv  rotated_vectors_successful_24hours_2.csv
src/ur5e_moveit_demo/scripts/: examples.py
src/ur5e_moveit_demo/src/: home.cpp  hydroponic_waypoint_grid.cpp  hydroponic_waypoint_grid_v2.cpp  move_ur5e.cpp  parlight_grid.cpp  parlight_grid_with_cadsensor.cpp  parlight_grid_with_hydrosystem.cpp  parlight_grid_with_parsensor.cpp  rpm_complex.cpp  rpm_continuous.cpp  rpm_continuous_data.cpp  rpm_pos_agnostic_with_data.cpp  rpm_simple.cpp  rpm_simple_with_data.cpp  russell_script1.cpp  waypoint_grid.cpp
(+282 files in other folders)
